# neuromesh

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.pytest_cache/: .gitignore
app/: main.py
app/infrastructure/: database.py
app/presentation/: api.py  dependencies.py
docs/adr/: 0004-use-psycopg-over-sqlalchemy.md  0004-worker-registration-api.md  0005-defer-psycopg-pool-open-deprecation.md  0006-defer-frontend-bundle-optimization.md  0006-worker-execution-loop.md  0007-reconciliation-loop.md  0007-worker-job-lease-ownership.md  0008-event-repository-persistence.md  0009-identifier-value-object-reconstruction.md  0010-postgres-repository-parity.md  0011-job-reclaim-and-reconciliation-repair.md  0012-real-job-execution.md  0013-job-listing-endpoint.md
docs/architecture/: 01-system-overview.md  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
neuromesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/application/: test_acquire_lease_service.py  test_assign_worker_service.py  test_cancel_job_service.py  test_cluster_capacity_service.py  test_cluster_health_service.py  test_cluster_utilization_service.py  test_complete_job_service.py  test_create_job_service.py  test_create_node_service.py  test_create_worker_service.py  test_dispatch_job_service.py  test_fail_job_service.py  test_get_job_history_service.py  test_get_job_service.py  test_get_node_service.py  test_heartbeat_node_service.py  test_job_completion_service.py  (+22 more)
(+194 files in other folders)
